--- a/class_3_bootstrap_grid.html
+++ b/class_3_bootstrap_grid.html
@@ -24,3 +24,20 @@
     </div>
   </body>
 </html>
+
+
+
+if ($("form").hasClass("d-none")) {
+  $("form").removeClass("d-none")
+} else {
+  $("form").addClass("d-none")
+}
+
+----------
+
+$("form").toggleClass("d-none")
+
+- AJAX, CRUD, REST, CORS, Get all comments
+- Local storage, cookie, session storage
+- SASS, LESS
+- Bonus: GIT
